# Weft-App

./: .gitignore  .prettierignore  .prettierrc  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  bunfig.toml  eslint.config.js  index.html  package.json  playwright.config.ts  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vite.config.ts
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: dependency-audit.yml  desktop-ci.yml  tauri-github-publish.yml  windows-build.yml
docs/: client-parity-audit.md  nice-to-have.md  payload-contract.md  performance-benchmarks.md  performance.md  rpc-contract.md
docs/contracts/: tauri-ipc.v2.json
docs/operations/: dependency-audit-policy.md  incident-triage-runbook.md  runtime-health-contract.md
reports/perf/: memory-checkpoints.sample.json
scripts/: build-desktop-all-quick.mjs  setup-default-profile.ps1
scripts/contracts/: check-tauri-ipc-bindings.mjs  generate-tauri-ipc-bindings.mjs
scripts/perf/: idle-cpu-sample.sh  index-query-bench.mjs  init-memory-checkpoints.mjs  memory-bench.mjs  memory-checkpoint.mjs  seed-index.mjs
scripts/security/: run-audit-policy.mjs
security/: audit-allowlist.json
server/: index.ts
shared/: lxmf-probe.test.ts
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json  tauri.linux.conf.json  tauri.windows.conf.json
src-tauri/crates/lxmf_adapter/: Cargo.toml
src-tauri/crates/lxmf_adapter/src/: lib.rs
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/tauri_backend/: README.md  actor.rs  attachment_handles.rs  commands.rs  index_store.rs  ipc_v2.rs  mod.rs  selector.rs
src-tauri/src/tauri_backend/commands/: daemon.rs  indexing.rs
src-tauri/src/tauri_backend/index_store/: attachments.rs  ingest.rs  maintenance.rs  queries.rs
src/app/: App.tsx
src/app/config/: events.ts  features.ts  index.ts  routes.ts
src/app/layout/: AppShell.tsx  CommandPalette.tsx  DeliveryDiagnosticsDrawer.tsx  NotificationToasts.tsx  PerformanceHud.tsx  SidebarNav.tsx  TopBar.tsx
src/app/layout/topbar/: NotificationMenu.tsx  useDeliveryDiagnostics.ts  useRelayRecovery.ts
src/app/routing/: mainRoutes.tsx  prefetch.ts
src/app/runtime/: DeepLinkBridge.tsx  motion.ts  perfHarness.ts
src/app/state/: LxmfEventHubProvider.tsx  NotificationCenterProvider.tsx  RuntimeHealthProvider.tsx
src/features/: README.md
src/features/announces/hooks/: useAnnounces.ts
src/features/announces/pages/: AnnouncesPage.tsx
src/features/announces/services/: announcesService.ts
src/features/announces/state/: useAnnounces.ts
src/features/chats/__tests__/: chatThreadsReducer.test.ts  offlineQueue.test.ts
src/features/settings/: constants.ts  types.ts  utils.ts
src/lib/: desktop-shell-api.ts  lxmf-api.ts  lxmf-contract.test.ts  lxmf-contract.ts  lxmf-payloads.test.ts  lxmf-payloads.ts  mock-data.ts  tauri-runtime.ts
src/lib/lxmf-api/: README.md  common.ts  control.ts  events.ts  index.ts  profile.ts  queries.ts  send.ts  types.ts
src/shared/contracts/: indexQueries.ts
src/shared/runtime/: notifications.ts  preferences.ts  sessionRestore.ts  shortcuts.ts  storage.ts  useAsyncResource.ts
src/shared/types/: announces.ts  chat.ts  files.ts  interfaces.ts  network.ts  people.ts  settings.ts
src/shared/ui/: ListSkeleton.tsx  PageHeading.tsx  Panel.tsx  VirtualizedList.tsx
src/shared/utils/: contactReference.test.ts  contactReference.ts  identity.ts  search.test.ts  search.ts  time.ts
tests/e2e/: smoke.spec.ts
(+83 files in other folders)
