[package]
name = "weft-desktop"
version = "0.1.0"
description = "Desktop runtime for Weft LXMF operations UI"
authors = ["TAK"]
license = "MIT"
repository = "https://github.com/FreeTAKTeam/LXMF-rs"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "weft_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.0", features = [] }
tauri-plugin-log = "2"
lxmf = { git = "https://github.com/FreeTAKTeam/LXMF-rs.git", rev = "1ce0472", package = "lxmf", features = ["cli", "embedded-runtime"] }

[patch.crates-io]
reticulum-rs = { git = "https://github.com/FreeTAKTeam/Reticulum-rs.git", rev = "960b216", package = "reticulum-rs" }

[dev-dependencies]
tempfile = "3.17.1"
