[package]
name = "weft-desktop"
version = "0.1.0"
description = "Desktop runtime for Weft LXMF operations UI"
authors = ["TAK"]
license = "MIT"
repository = "https://github.com/FreeTAKTeam/LXMF-rs"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "weft_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
base64 = "0.22"
log = "0.4"
tauri = { version = "2.10.0", features = ["tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-deep-link = "2.4.7"
tauri-plugin-single-instance = { version = "2.4.0", features = ["deep-link"] }
hex = "0.4"
rmpv = "1"
rmp-serde = "1"
serde_cbor = "0.11"
lxmf = { path = "../../LXMF-rs/crates/lxmf", package = "lxmf", features = ["cli", "embedded-runtime"] }
rusqlite = { version = "0.32", features = ["bundled", "modern_sqlite"] }

[patch.crates-io]
reticulum-rs = { path = "../../Reticulum-rs/crates/reticulum", package = "reticulum-rs" }

[dev-dependencies]
tempfile = "3.17.1"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
strip = true
